# stethoscope

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  biome.json  package.json  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/web/: README.md
cloud/: Dockerfile  README.md  RUNBOOK.md  __init__.py  requirements.txt
cloud/api/: __init__.py  app.py  auth.py  auth_cognito.py  schema_pg.sql  store_pg.py  store_s3.py  tenancy.py  worker.py
cloud/infra/: cloudfront.tf  cognito.tf  ecr.tf  ecs_api.tf  ecs_worker.tf  iam.tf  locals.tf  main.tf  monitoring.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  sqs.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
cloud/tests/: conftest.py  test_admin_gate.py  test_app.py  test_s3_offload.py
crates/breakpoint/: Cargo.toml
crates/breakpoint/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/command/: Cargo.toml
crates/command/src/: lib.rs
crates/diff/: Cargo.toml
crates/diff/src/: lib.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs  main.rs  mapper.rs  otel.rs  service.rs
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  models.rs  schema.rs
docs/: replay.md  walkthrough.html  windows-build.md
docs/site/: docs.html  index.html
examples/min_agent/: agent.py
examples/replayable_agent/: agent.py
scripts/: smoke.ps1  smoke.py
tools/ref_ingest/: README.md  __init__.py  api.py  bp.py  cli.py  ids.py  mapper.py  schema.py  server.py  store.py
tools/ref_ingest/tests/: test_ref_ingest.py
tools/ref_replay/: __init__.py  engine.py
