[package]
name = "stethoscope-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "stethoscope"
path = "src/main.rs"

[dependencies]
stethoscope-store = { workspace = true }
stethoscope-ingestion = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
