[package]
name = "stethoscope-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Canonical trace-diff: custom span-tree alignment + `similar` for text
# (PRD 6.1). The UI ships a TS mirror (data/diff.ts) until the Tauri shell
# compiles; both must produce the same alignment.

[dependencies]
stethoscope-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = "2"
