[package]
name = "stethoscope-replay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
stethoscope-store = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
